Arachnophobia - Cocoon update. (#2085)
Co-authored-by: Drywink <43855731+drywink@users.noreply.github.com>

(cherry picked from commit 8aa72c848fc3c20f2a2249d2cfca14ae93a4ef80)

--- a/Resources/Prototypes/Actions/spider.yml
+++ b/Resources/Prototypes/Actions/spider.yml
@@ -21,3 +21,19 @@
     useDelay: 1
   - type: InstantAction
     event: !type:SericultureActionEvent
+
+- type: entity
+  id: ActionWrap
+  name: Cocoon prey
+  description: Wrap a nearby humanoid in immobilizing silk.
+  components:
+  - type: EntityTargetAction
+    whitelist:
+      components:
+      - Body
+    canTargetSelf: false
+    interactOnMiss: false
+    itemIconStyle: NoItem
+    icon: _Funkystation/Interface/Actions/cocoon.png
+    iconOn: _Funkystation/Interface/Actions/cocoon.png
+    event: !type:WrapActionEvent {}
