--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -2662,6 +2662,12 @@
     damage:
       types:
         Piercing: 6
+  - type: Puller
+    needsHands: false
+  - type: Cocooner
+    wrapAction: ActionWrap
+    wrapDuration: 10
+    hungerCost: 30
 
 - type: entity
   parent:
