Cocoon balancing, and new bite ability for arachnids and giant spiders (#2203)
Co-authored-by: Drywink <hugogrethen@gmail.com>

(cherry picked from commit 533077a24d356dea55937d96dab043ce3710b2a6)

--- a/Resources/Prototypes/Actions/spider.yml
+++ b/Resources/Prototypes/Actions/spider.yml
@@ -37,3 +37,19 @@
     icon: _Funkystation/Interface/Actions/cocoon.png
     iconOn: _Funkystation/Interface/Actions/cocoon.png
     event: !type:WrapActionEvent {}
+
+- type: entity
+  id: ActionBite
+  name: Bite
+  description: Bite a target and inject them with a solution.
+  components:
+  - type: EntityTargetAction
+    whitelist:
+      components:
+      - Body
+    canTargetSelf: false
+    interactOnMiss: false
+    itemIconStyle: NoItem
+    icon: _Funkystation/Interface/Actions/bite.png
+    iconOn: _Funkystation/Interface/Actions/bite.png
+    event: !type:BiteActionEvent {}
