--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -2668,6 +2668,12 @@
     wrapAction: ActionWrap
     wrapDuration: 10
     hungerCost: 30
+  - type: Bite
+    biteAction: ActionBite
+    cooldown: 90
+    actionDescription: bite-action-description-sleep
+    injectedReagents:
+      ChloralHydrate: 10
 
 - type: entity
   parent:
