--- a/Resources/Prototypes/Species/vox.yml
+++ b/Resources/Prototypes/Species/vox.yml
@@ -8,6 +8,7 @@
   dollPrototype: MobVoxDummy
   skinColoration: VoxFeathers
   defaultSkinTone: "#6c741d"
+  cocoonScale: 1.1, 1.1
   maleFirstNames: NamesVox
   femaleFirstNames: NamesVox
   naming: First
