--- a/Resources/Prototypes/Species/human.yml
+++ b/Resources/Prototypes/Species/human.yml
@@ -7,6 +7,7 @@
   markingLimits: MobHumanMarkingLimits
   dollPrototype: MobHumanDummy
   skinColoration: HumanToned
+  cocoonScale: 1.0, 1.0
 
 # The lack of a layer means that
 # this person cannot have round-start anything
